Fix body overflow

--- a/examples/vendor.css
+++ b/examples/vendor.css
@@ -1,5 +1,5 @@
 .modal-open {
-  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .modal {
